# rust-nvr

./: .gitignore  Cargo.toml
src/: index.html  main.rs  rtsp.rs  web.rs
